// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot > snapshot1 1`] = `
<DocumentFragment>
  <button
    class="text-blue-900 bg-white border border-blue-300 focus:outline-none hover:bg-blue-100 focus:ring-4 focus:ring-blue-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:text-white dark:border-blue-600 dark:hover:bg-blue-700 dark:hover:border-blue-600 w-[8em]"
    type="button"
  >
    フォロー
  </button>
</DocumentFragment>
`;

exports[`snapshot > snapshot2 1`] = `
<DocumentFragment>
  <button
    class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 w-[8em]"
    type="button"
  >
    フォロー中
  </button>
</DocumentFragment>
`;

exports[`snapshot > snapshot3 1`] = `
<DocumentFragment>
  <button
    class="text-blue-900 bg-white border border-blue-300 focus:outline-none hover:bg-blue-100 focus:ring-4 focus:ring-blue-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:text-white dark:border-blue-600 dark:hover:bg-blue-700 dark:hover:border-blue-600 w-[8em]"
    type="button"
  >
    フォロー
  </button>
</DocumentFragment>
`;
